--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -22,7 +22,7 @@ To adapt the Elastic APM agent to your needs, you can configure it using environ
 | `http://localhost:8200` | List
 |============
 
-The URLs for your APM Servers. The URLs must be fully qualified, including protocol (`http` or `https`) and port. To add multiple servers separate them with comma (`,`).
+The URLs for your APM Servers. The URLs must be fully qualified, including protocol (`http` or `https`) and port. To add multiple servers, separate them with a comma (`,`).
 
 
 NOTE: Providing multiple URLs only works with APM Server v6.5+.
