--- a/docs/intro.asciidoc
+++ b/docs/intro.asciidoc
@@ -21,8 +21,5 @@ To instrument other events, you can use custom spans.
 [float]
 [[additional-components]]
 === Additional Components
-The agent is only one of multiple components you need to get started with APM.
-Please also have a look at the documentation for
-
-* {apm-server-ref}/index.html[APM Server]
-* {ref}/index.html[Elasticsearch]
+APM Agents work in conjunction with the {apm-server-ref}/index.html[APM Server], {ref}/index.html[Elasticsearch], and {kibana-ref}/index.html[Kibana].
+Please view the {apm-get-started-ref}/index.html[APM Overview] for details on how these components work together.
