--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -59,7 +59,7 @@ This is a typical `appsettings.json` file that contains some sample configuratio
 [options="header"]
 |============
 | Environment variable name | IConfiguration key
-| `ELASTIC_APM_SERVER_URLS` | ElasticApm:ServerUrls
+| `ELASTIC_APM_SERVER_URLS` | `ElasticApm:ServerUrls`
 |============
 
 [options="header"]
@@ -80,7 +80,7 @@ NOTE: Providing multiple URLs only works with APM Server v6.5+.
 [options="header"]
 |============
 | Environment variable name | IConfiguration key
-| `ELASTIC_APM_LOG_LEVEL`   | ElasticApm:LogLevel
+| `ELASTIC_APM_LOG_LEVEL`   | `ElasticApm:LogLevel`
 |============
 
 [options="header"]
