--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1,12 +1,12 @@
 [[configuration]]
 == Configuration
 
-To adapt the Elastic APM agent to your needs, you can configure it using different configuration sources, which have different naming conventions for the property key. 
+You can utilize configuration options to adapt the Elastic APM agent to your needs. There are multiple configuration sources, each with different naming conventions for the property key.
 
-By default the agent uses environment variables. Additionally on ASP.NET Core the agent can plug into the https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-2.2[Microsoft.Extensions.Configuration] infrastructure.
+By default, the agent uses environment variables. Additionally, on ASP.NET Core, the agent can plug into the https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-2.2[Microsoft.Extensions.Configuration] infrastructure.
 
 === Configuration on ASP.NET Core
-The `UseElasticApm()` extension method offers an overload to pass an `IConfiguration` instance to the APM Agent. By using this overload in a typical ASP.NET Core application the `Startup.cs` file would contain code similar to the following:
+The `UseElasticApm()` extension method offers an overload to pass an `IConfiguration` instance to the APM Agent. By using this overload in a typical ASP.NET Core application, the `Startup.cs` file would contain code similar to the following:
 
 [source,csharp]
 ----
@@ -53,7 +53,7 @@ This is a typical `appsettings.json` file that contains some sample configuratio
 [[config-reporter]]
 === Reporter configuration options
 [float]
-[[config-ServerUrls]]
+[[config-server-urls]]
 ==== `ServerUrls`
 
 [options="header"]
@@ -74,7 +74,7 @@ The URLs for your APM Servers. The URLs must be fully qualified, including proto
 NOTE: Providing multiple URLs only works with APM Server v6.5+.
 
 [float]
-[[config-LogLevel]]
+[[config-log-level]]
 ==== `LogLevel`
 
 [options="header"]
