Add public-api.asciidoc to index.asciidoc
+some fixes in public-api.asciidoc

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -11,4 +11,5 @@ endif::[]
 ifndef::env-github[]
 include::./intro.asciidoc[Introduction]
 include::./configuration.asciidoc[Configuration]
+include::./public-api.asciidoc[API documentation]
 endif::[]
