--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -15,15 +15,15 @@ as well as track errors.
 === Tracer API
 The tracer gives you access to the currently active transaction and it enables you to manually start a transaction.
 
-You can access  the API by using the sataic property on the Agent `Elastic.Apm.Agent.Api`.
+You can access the API by using the static property on the Agent `Elastic.Apm.Agent.Api`.
 
 [float]
 [[api-start-transaction]]
-==== `Transaction StartTransaction()`
+==== `Transaction StartTransaction(string name, string type)`
 Use this method to create a custom transaction.
 
 
-Note that in case of autoinstrumentation the agent will automatically do this for you. For example in case of incoming HTTP calls in an ASP.NET Core application the agent automatically starts a transaction.
+Note that in case of auto-instrumentation the agent will automatically do this for you. For example in case of incoming HTTP calls in an ASP.NET Core application the agent automatically starts a transaction.
 
 You only need to use this method to create custom transactions.
 
@@ -84,7 +84,7 @@ It has 3 parameters:
 ** `Func<Task<T>>`
 ** `Func<ITransaction,Task<T>>`
 
-The following code is the equivalent of previous example with the convenient API. It automaticall starts and ends the transaction and reports unhandled exceptions. The `t` parameter gives you access to the `ITransaction` instance.
+The following code is the equivalent of previous example with the convenient API. It automatically starts and ends the transaction and reports unhandled exceptions. The `t` parameter gives you access to the `ITransaction` instance which represents the transaction that you just created.
 [source,csharp]
 ----
 Elastic.Apm.Agent.Api
@@ -102,7 +102,7 @@ Example:
 [source,csharp]
 ----
 await Elastic.Apm.Agent.Api
-        .CaptureTransaction("TestTransaction", "TestType", async (t) =>
+        .CaptureTransaction("TestTransaction", "TestType", async () =>
 {
     //application code that is captured as a transaction
     await Task.Delay(500); //sample async code
@@ -129,10 +129,11 @@ You may only interact with transaction when you have control over its lifecycle.
 [float]
 [[api-transaction-create-span]]
 ==== `Span StartSpan(string name, string type, string subType = null, string action = null)`
-Start and return a new custom span as a child of this transaction.
+Start and return a new custom span as a child of the given transaction.
 
 It is important to call <<api-span-end>> when the span has ended or to use the <<convenient-capture-span>> method.
 A best practice is to use the span in a try-catch-finally block.
+
 Example:
 
 [source,csharp]
@@ -162,6 +163,7 @@ finally
 Ends the transaction and schedules it to be reported to the APM Server.
 It is illegal to call any methods on a span instance which has already ended.
 This also includes this method and <<api-transaction-create-span>>.
+
 Example:
 
 [source,csharp]
@@ -203,7 +205,7 @@ It has 5 parameters:
 * `supType` (optional): The subtype of the span
 * `action` (optional): The action of the span
 
-The following code is the equivalent of previous example from the section <<api-transaction-create-span>> with the convenient API. It automaticall calls and ends the span and reports unhandled exceptions. The `s` parameter gives you access to the `ISpan` instance.
+The following code is the equivalent of previous example from the section <<api-transaction-create-span>> with the convenient API. It automatically starts and ends the span and reports unhandled exceptions. The `s` parameter gives you access to the `ISpan` instance which represents the span that you just created.
 
 [source,csharp]
 ----
