--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -15,7 +15,7 @@ as well as track errors.
 === Tracer API
 The tracer gives you access to the currently active transaction and it enables you to manually start a transaction.
 
-You can access the API by using the static property on the Agent `Elastic.Apm.Agent.Api`.
+You can access the API by using the static property on the Agent: `Elastic.Apm.Agent.Api`.
 
 [float]
 [[api-start-transaction]]
@@ -23,11 +23,11 @@ You can access the API by using the static property on the Agent `Elastic.Apm.Ag
 Use this method to create a custom transaction.
 
 
-Note that in case of auto-instrumentation the agent will automatically do this for you. For example in case of incoming HTTP calls in an ASP.NET Core application the agent automatically starts a transaction.
+Note that in the case of auto-instrumentation, the agent will automatically do this for you. For example, if you have incoming HTTP calls in an ASP.NET Core application, the agent automatically starts a transaction. In these instances, this method is not needed.
 
 You only need to use this method to create custom transactions.
 
-It is important to call <<api-transaction-end>> when the transaction has ended.
+It's important to call <<api-transaction-end>> when the transaction has ended.
 A best practice is to use the transaction in a try-catch-finally block or to use the <<convenient-capture-transaction>> method.
 
 Example:
@@ -55,7 +55,7 @@ finally
 [[api-current-transaction]]
 ==== `Transaction CurrentTransaction`
 Returns the currently active transaction.
-See <<api-transaction>> on how to customize the current transaction.
+See the <<api-transaction>> to customize the current transaction.
 
 If there is no current transaction,
 this method will return null.
@@ -84,7 +84,7 @@ It has 3 parameters:
 ** `Func<Task<T>>`
 ** `Func<ITransaction,Task<T>>`
 
-The following code is the equivalent of previous example with the convenient API. It automatically starts and ends the transaction and reports unhandled exceptions. The `t` parameter gives you access to the `ITransaction` instance which represents the transaction that you just created.
+The following code is the equivalent of the previous example with the convenient API. It automatically starts and ends the transaction and reports unhandled exceptions. The `t` parameter gives you access to the `ITransaction` instance which represents the transaction that you just created.
 [source,csharp]
 ----
 Elastic.Apm.Agent.Api
@@ -109,7 +109,7 @@ await Elastic.Apm.Agent.Api
 });
 ----
 
-NOTE: The <<convenient-capture-transaction>> method does not start any `Task` for you, so you have to call it with the `await` keyword if you use one of the overloads that except `Task` or `Task<T>`.
+NOTE: The <<convenient-capture-transaction>> method does not start any `Task` for you, so you have to call it with the `await` keyword if you use one of the overloads that accept `Task` or `Task<T>`.
 
 
 //----------------------------
@@ -124,7 +124,7 @@ A transaction is the first <<api-span,`Span`>> of a service, and is also known u
 See <<api-current-transaction>> on how to get a reference of the current transaction.
 
 NOTE: Calling any of the transaction's methods after <<api-transaction-end>> has been called is illegal.
-You may only interact with transaction when you have control over its lifecycle.
+You may only interact with a transaction when you have control over its lifecycle.
 
 [float]
 [[api-transaction-create-span]]
@@ -205,7 +205,7 @@ It has 5 parameters:
 * `supType` (optional): The subtype of the span
 * `action` (optional): The action of the span
 
-The following code is the equivalent of previous example from the section <<api-transaction-create-span>> with the convenient API. It automatically starts and ends the span and reports unhandled exceptions. The `s` parameter gives you access to the `ISpan` instance which represents the span that you just created.
+The following code is the equivalent of the previous example from the <<api-transaction-create-span>> section with the convenient API. It automatically starts and ends the span and reports unhandled exceptions. The `s` parameter gives you access to the `ISpan` instance which represents the span that you just created.
 
 [source,csharp]
 ----
@@ -217,7 +217,7 @@ transaction.CaptureSpan("SampleSpan", Span.TYPE_DB, (s) =>
 },Span.SUBTYPE_MSSQL, Span.ACTION_QUERY);
 ----
 
-Similarly to the <<convenient-capture-transaction>> API this method also supports `async` methods with the `Func<Task>` overloads.
+Similar to the <<convenient-capture-transaction>> API, this method also supports `async` methods with the `Func<Task>` overloads.
 
 NOTE: The duration of the span will be the timespan between the first and the last line of the `async` lambda expression.
 
@@ -233,7 +233,7 @@ var asyncResult = await transaction.CaptureSpan("Select FROM customer", Span.TYP
 });
 ----
 
-NOTE: The <<convenient-capture-span>> method does not start any `Task` for you, so you have to call it with the `await` keyword if you use one of the overloads that except `Task` or `Task<T>`.
+NOTE: The <<convenient-capture-span>> method does not start any `Task` for you, so you have to call it with the `await` keyword if you use one of the overloads that accept `Task` or `Task<T>`.
 
 
 //----------------------------
@@ -245,7 +245,7 @@ A span contains information about a specific code path, executed as part of a tr
 
 If for example a database query happens within a recorded transaction,
 a span representing this database query may be created.
-In such a case the name of the span will contain information about the query itself,
+In such a case, the name of the span will contain information about the query itself,
 and the type will hold information about the database type.
 
 [float]
