--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -33,7 +33,7 @@ Example:
 [source,csharp]
 ----
 var transaction = Elastic.Apm.Agent
-        .Tracer.StartTransaction("MyTransaction", Transaction.TYPE_REQUEST);
+        .Tracer.StartTransaction("MyTransaction", Transaction.TypeRequest);
 try
 {
     //application code that is captured as a transaction
@@ -86,7 +86,7 @@ The following code is the equivalent of the previous example with the convenient
 [source,csharp]
 ----
 Elastic.Apm.Agent.Tracer
-        .CaptureTransaction("TestTransaction", Transaction.TYPE_REQUEST, (t) =>
+        .CaptureTransaction("TestTransaction", Transaction.TypeRequest, (t) =>
 {
    //application code that is captured as a transaction
 });
@@ -134,11 +134,10 @@ Example:
 
 [source,csharp]
 ----
-ISpan span = transaction.StartSpan("Select FROM customer", Span.TYPE_DB);
+ISpan span = transaction.StartSpan("Select FROM customer",
+     Span.TypeDb, Span.SubtypeMssql, Span.ActionQuery);
 try
 {
-    span.Subtype = Span.SUBTYPE_MSSQL;
-    span.Action = Span.ACTION_QUERY;
     //execute db query
 }
 catch(Exception e)
@@ -210,10 +209,10 @@ The following code is the equivalent of the previous example from the <<api-tran
 ----
 ITransaction transaction = Elastic.Apm.Agent.Tracer.CurrentTransaction;
 
-transaction.CaptureSpan("SampleSpan", Span.TYPE_DB, (s) =>
+transaction.CaptureSpan("SampleSpan", Span.TypeDb, (s) =>
 {
     //execute db query
-},Span.SUBTYPE_MSSQL, Span.ACTION_QUERY);
+},Span.SubtypeMssql, Span.ActionQuery);
 ----
 
 Similar to the <<convenient-capture-transaction>> API, this method also supports `async` methods with the `Func<Task>` overloads.
@@ -224,7 +223,7 @@ This example shows you how to track an `async` code block that returns a result 
 [source,csharp]
 ----
 ITransaction transaction = Elastic.Apm.Agent.Tracer.CurrentTransaction;
-var asyncResult = await transaction.CaptureSpan("Select FROM customer", Span.TYPE_DB, async(s) =>
+var asyncResult = await transaction.CaptureSpan("Select FROM customer", Span.TypeDb, async(s) =>
 {
     //application code that is captured as a span
     await Task.Delay(500); //sample async code
