--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -51,6 +51,30 @@ This is a typical `appsettings.json` file that contains some sample configuratio
 ----
 
 [[config-reporter]]
+=== Core configuration options
+
+[float]
+[[config-service-name]]
+==== `ServiceName`
+
+This is used to keep all the errors and transactions of your service together
+and is the primary filter in the Elastic APM user interface.
+
+NOTE: The service name must conform to this regular expression: ^[a-zA-Z0-9 _-]+$. In less regexy terms: Your service name must only contain characters from the ASCII alphabet, numbers, dashes, underscores and spaces.
+
+[options="header"]
+|============
+| Environment variable name      | IConfiguration key 
+| `ELASTIC_APM_SERVICE_NAME` | `ElasticApm:ServiceName`
+|============
+
+[options="header"]
+|============
+| Default                          | Type
+| Name of the entry assembly       | String 
+|============
+
+[[config-reporter]]
 === Reporter configuration options
 [float]
 [[config-server-urls]]
