--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -1,3 +1,8 @@
+ifdef::env-github[]
+NOTE: For the best reading experience,
+please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
+endif::[]
+
 = APM .NET Agent Reference (Prototype)
 :branch: current
 :server-branch: 6.5
@@ -10,6 +15,7 @@ endif::[]
 
 ifndef::env-github[]
 include::./intro.asciidoc[Introduction]
+include::./setup.asciidoc[Set Up]
 include::./configuration.asciidoc[Configuration]
 include::./public-api.asciidoc[API documentation]
 endif::[]
