--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -8,14 +8,10 @@ endif::[]
 :server-branch: 6.5
 include::{asciidoc-dir}/../../shared/attributes.asciidoc[]
 
-ifdef::env-github[]
-NOTE: For the best reading experience,
-please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
-endif::[]
-
 ifndef::env-github[]
 include::./intro.asciidoc[Introduction]
 include::./setup.asciidoc[Set Up]
 include::./configuration.asciidoc[Configuration]
 include::./public-api.asciidoc[API documentation]
+include::./release-notes.asciidoc[Release notes]
 endif::[]
