--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -33,7 +33,7 @@ Example:
 [source,csharp]
 ----
 var transaction = Elastic.Apm.Agent
-        .Tracer.StartTransaction("MyTransaction", Transaction.TypeRequest);
+        .Tracer.StartTransaction("MyTransaction", ApiConstants.TypeRequest);
 try
 {
     //application code that is captured as a transaction
@@ -86,7 +86,7 @@ The following code is the equivalent of the previous example with the convenient
 [source,csharp]
 ----
 Elastic.Apm.Agent.Tracer
-        .CaptureTransaction("TestTransaction", Transaction.TypeRequest, (t) =>
+        .CaptureTransaction("TestTransaction", ApiConstants.TypeRequest, (t) =>
 {
    //application code that is captured as a transaction
 });
