--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -7,7 +7,7 @@ NOTE: For the best reading experience,
 please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
 endif::[]
 
-= APM .NET Agent Reference (Prototype)
+= APM .NET Agent Reference
 
 include::./intro.asciidoc[Introduction]
 include::./setup.asciidoc[Set Up]
