--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -259,6 +259,7 @@ var asyncResult = await transaction.CaptureSpan("Select FROM customer", ApiConst
 
 NOTE: The <<convenient-capture-span>> method does not start any `Task` for you, so you have to call it with the `await` keyword if you use one of the overloads that accept `Task` or `Task<T>`.
 
+NOTE: Code samples above use `Elastic.Apm.Agent.Tracer.CurrentTransaction`. In production code you should make sure the `CurrentTransaction` is not `null`.
 
 //----------------------------
 [float]
