--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -56,7 +56,7 @@ Returns the currently active transaction.
 See the <<api-transaction>> to customize the current transaction.
 
 If there is no current transaction,
-this method will return null.
+this method will return `null`.
 
 [source,csharp]
 ----
