--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -3,7 +3,7 @@ NOTE: For the best reading experience,
 please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
 endif::[]
 
-[[supported-technologies-details]]
+[[supported-technologies]]
 == Supported Technologies
 This page describes the technologies supported by the Elastic APM .NET agent.
 
