--- a/docs/metrics.asciidoc
+++ b/docs/metrics.asciidoc
@@ -1,6 +1,6 @@
 ifdef::env-github[]
 NOTE: For the best reading experience,
-please view this documentation at https://www.elastic.co/guide/en/apm/agent/java[elastic.co]
+please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
 endif::[]
 
 [[metrics]]
@@ -10,7 +10,7 @@ The .NET agent tracks certain system and application metrics.
 Some of them have built-in visualizations and some can only be visualized with custom Kibana dashboards.
 
 These metrics will be sent regularly to the APM Server and from there to Elasticsearch.
-You can adjust the interval with the setting <<config-metrics-interval>>.
+You can adjust the interval with the setting <<configuration.asciidoc#config-metrics-interval,`MetricsInterval`>>.
 
 The metrics will be stored in the `apm-*` index and have the `processor.event` property set to `metric`.
 
@@ -73,7 +73,7 @@ format: bytes
 
 Platform: Windows and Linux only.
 
-Actual free memory in bytes.
+Actual free memory.
 --
 
 
