--- a/docs/metrics.asciidoc
+++ b/docs/metrics.asciidoc
@@ -1,6 +1,6 @@
 ifdef::env-github[]
 NOTE: For the best reading experience,
-please view this documentation at https://www.elastic.co/guide/en/apm/agent/java[elastic.co]
+please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
 endif::[]
 
 [[metrics]]
@@ -73,7 +73,7 @@ format: bytes
 
 Platform: Windows and Linux only.
 
-Actual free memory in bytes.
+Actual free memory.
 --
 
 
