--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -287,6 +287,27 @@ NOTE: The <<convenient-capture-span>> method does not start any `Task` for you, 
 
 NOTE: Code samples above use `Elastic.Apm.Agent.Tracer.CurrentTransaction`. In production code you should make sure the `CurrentTransaction` is not `null`.
 
+[float]
+[[api-transaction-context]]
+==== `Context`
+You can attach additional context to manually captured transactions.
+
+If you use a web framework for which agent doesn't capture transactions automatically (see <<supported-web-frameworks>>),
+you can add context related to the captured transaction by setting various properties of transaction's `Context` property.
+For example:
+[source,csharp]
+----
+Agent.Tracer.CaptureTransaction("MyCustomTransaction",ApiConstants.TypeRequest, (transaction) =>
+{
+  transaction.Context.Request = new Request(myRequestMethod, myRequestUri);
+  
+  // ... code executing the request
+  
+  transaction.Context.Response =
+     new Response { StatusCode = myStatusCode, Finished = wasFinished };
+});
+----
+
 //----------------------------
 [float]
 [[api-span]]
@@ -339,3 +360,38 @@ This method is typically used when you want to report an error, but you don't ha
 Ends the span and schedules it to be reported to the APM Server.
 
 It is illegal to call any methods on a span instance which has already ended.
+
+[float]
+[[api-span-context]]
+==== `Context`
+You can attach additional context to manually captured spans.
+
+If you use a database library for which agent doesn't capture spans automatically (see <<supported-data-access-technologies>>),
+you can add context related to the captured database operation by setting span's `Context.Db` property.
+For example:
+[source,csharp]
+----
+Agent.Tracer.CurrentTransaction.CaptureSpan("MyDbWrite", ApiConstants.TypeDb, (span) =>
+{
+    span.Context.Db = new Database 
+        { Statement = myDbStatement, Type = myDbType, Instance = myDbInstance };
+    
+    // ... code executing the database operation
+});
+----
+
+If you use an HTTP library for which agent doesn't capture spans automatically (see <<supported-networking-client-side-technologies>>),
+you can add context related to the captured HTTP operation by setting span's `Context.Http` property.
+For example:
+[source,csharp]
+----
+Agent.Tracer.CurrentTransaction.CaptureSpan("MyHttpOperation", ApiConstants.TypeExternal, (span) =>
+{
+    span.Context.Http = new Http
+        { Url = myUrl, Method = myMethod };
+
+    // ... code executing the HTTP operation
+
+    span.Context.Http.StatusCode = myStatusCode;
+});
+----
